Game Jam submission

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PocketCIV</title>
+    <title>Eradotus</title>
+    <meta name="description" content="Civ became lame and gay, so we made this" />
   </head>
   <body>
     <div id="root"></div>
