Update index.html description

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eradotus</title>
-    <meta name="description" content="Civ became lame and gay, so we made this" />
+    <meta name="description" content="Civ became lame, so we made this" />
   </head>
   <body>
     <div id="root"></div>
